syntax = "proto3";

package Detect;

option go_package = "/detect_service;Detect";

import "google/protobuf/timestamp.proto";

message BoxRect {
  double x = 1;       // x 坐标
  double y = 2;       // y 坐标
  double width = 3;   // 宽度
  double height = 4;  // 高度
  int64 class_id = 5;    // 检测种类
}

message CameraRect {
  int64 camera_id = 1;
  repeated BoxRect box_rect = 2;
}

message DetectRequest {
  bool status = 1;
}

message DetectResponse {
  bool status = 1;
  repeated CameraRect camera_rect = 2;
  google.protobuf.Timestamp resp_timestamp = 3;
}

service DetectResultService {
  rpc DetectedRect (DetectRequest) returns (DetectResponse) {};
}